syntax = "proto3";

package whatsapp;

// Servicio para operaciones de WhatsApp
service WhatsAppService {
  
  // Envía un mensaje de WhatsApp
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  
  // Obtiene el estado del mensaje
  rpc GetMessageStatus(MessageStatusRequest) returns (MessageStatusResponse);
  
  // Obtiene el estado de la conexión con WhatsApp
  rpc GetConnectionStatus(ConnectionStatusRequest) returns (ConnectionStatusResponse);
  
  // Stream de notificaciones de cambios en el estado de conexión
  rpc WatchConnectionStatus(ConnectionStatusRequest) returns (stream ConnectionStatusResponse);
  
  // Reinicia la conexión con WhatsApp
  rpc RestartConnection(RestartConnectionRequest) returns (RestartConnectionResponse);
  
}

// Solicitud para enviar mensaje
message SendMessageRequest {
  string numero = 1;         // Número de teléfono del destinatario
  string codigo_pais = 2;    // Código del país (ejemplo: "57" para Colombia)
  string mensaje = 3;        // Contenido del mensaje a enviar
  string message_id = 4;     // ID único del mensaje (opcional)
  MessageType type = 5;      // Tipo de mensaje
}

// Respuesta del envío de mensaje
message SendMessageResponse {
  bool success = 1;          // Indica si el mensaje se envió exitosamente
  string message = 2;        // Mensaje de respuesta o error
  string message_id = 3;     // ID del mensaje enviado
  int64 timestamp = 4;       // Timestamp Unix del envío
}

// Solicitud para verificar estado del mensaje
message MessageStatusRequest {
  string message_id = 1;     // ID del mensaje a verificar
}

// Respuesta del estado del mensaje
message MessageStatusResponse {
  string message_id = 1;     // ID del mensaje
  MessageStatus status = 2;  // Estado actual del mensaje
  int64 timestamp = 3;       // Timestamp de la última actualización
  string details = 4;        // Detalles adicionales del estado
}

// Tipos de mensaje soportados
enum MessageType {
  TEXT = 0;        // Mensaje de texto
  IMAGE = 1;       // Imagen
  DOCUMENT = 2;    // Documento
  AUDIO = 3;       // Audio
  VIDEO = 4;       // Video
}

// Estados posibles del mensaje
enum MessageStatus {
  UNKNOWN = 0;     // Estado desconocido
  PENDING = 1;     // Pendiente de envío
  SENT = 2;        // Enviado
  DELIVERED = 3;   // Entregado
  READ = 4;        // Leído
  FAILED = 5;      // Falló el envío
}

// Solicitud para obtener estado de conexión
message ConnectionStatusRequest {
  bool watch = 1;  // Si es true, mantiene el stream activo para recibir actualizaciones
}

// Respuesta del estado de conexión con WhatsApp
message ConnectionStatusResponse {
  ConnectionState state = 1;  // Estado actual de la conexión
  string message = 2;          // Mensaje descriptivo del estado
  int64 timestamp = 3;         // Timestamp Unix del estado
  ConnectionInfo info = 4;     // Información adicional de la conexión
}

// Estados de conexión con WhatsApp
enum ConnectionState {
  DISCONNECTED = 0;   // Desconectado
  CONNECTING = 1;     // Conectando
  CONNECTED = 2;      // Conectado y listo
  RECONNECTING = 3;   // Reconectando
  ERROR = 4;          // Error en la conexión
  LOGGED_OUT = 5;     // Sesión cerrada (requiere QR)
}

// Información adicional de la conexión
message ConnectionInfo {
  string phone_number = 1;     // Número de teléfono conectado
  string device_name = 2;      // Nombre del dispositivo
  bool is_authenticated = 3;   // Si está autenticado
  int64 connected_since = 4;   // Timestamp desde cuando está conectado
}

// Solicitud para reiniciar conexión
message RestartConnectionRequest {
  bool force = 1;              // Si es true, fuerza el reinicio aunque esté conectado
  string reason = 2;           // Razón del reinicio (opcional)
}

// Respuesta del reinicio de conexión
message RestartConnectionResponse {
  bool success = 1;            // Indica si el reinicio fue exitoso
  string message = 2;          // Mensaje descriptivo del resultado
  ConnectionState new_state = 3; // Nuevo estado después del reinicio
  int64 timestamp = 4;         // Timestamp del reinicio
}