import GrpcClient from './src/grpc/client.example.js';

async function testGrpcClient() {
  const client = new GrpcClient('localhost:50051');

  try {
    console.log('ğŸ” Testing Health Check...');
    const healthResponse = await client.checkHealth();
    console.log('âœ… Health Response:', healthResponse);

    console.log('\nğŸ“¤ Testing WhatsApp Message...');
    const messageResponse = await client.sendMessage(
      '6930989',  // numero (sin cÃ³digo de paÃ­s)
      '57',       // codigo_pais
      'Â¡Hola desde gRPC! Este es un mensaje de prueba desde el cliente.'
    );
    console.log('âœ… Message Response:', messageResponse);

    if (messageResponse.success && messageResponse.message_id) {
      console.log('\nğŸ” Testing Message Status...');
      await new Promise(resolve => setTimeout(resolve, 1000)); // Esperar 1 segundo
      
      const statusResponse = await client.getMessageStatus(messageResponse.message_id);
      console.log('âœ… Status Response:', statusResponse);
    }

  } catch (error) {
    console.error('âŒ Error testing gRPC client:', error.message);
    console.error('ğŸ“‹ Make sure the gRPC server is running on localhost:50051');
  } finally {
    console.log('\nğŸ”’ Closing client connections...');
    client.close();
  }
}

// Ejecutar prueba
testGrpcClient();